# nixman

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml
crates/nixman-cli/: Cargo.toml  build.rs
crates/nixman-cli/src/: confirm.rs  diff_util.rs  error.rs  main.rs  pending_store.rs  value_parser.rs  verbosity.rs
crates/nixman-cli/src/commands/: check.rs  completions.rs  diff.rs  doctor.rs  explain.rs  flake.rs  generations.rs  history.rs  intent.rs  migrate.rs  mod.rs  option.rs  packages.rs  pending.rs  rebuild.rs  schema.rs  services.rs  status.rs  try_cmd.rs  workspace.rs
crates/nixman-cli/src/commands/hm/: mod.rs  (+4 more)
crates/nixman-cli/tests/: cli_test.rs
crates/nixman-core/: Cargo.toml
crates/nixman-core/src/: lib.rs  preflight.rs
crates/nixman-core/src/builder/: history.rs  hm.rs  mod.rs  phases.rs  rebuild.rs  stream.rs  tests.rs  types.rs
crates/nixman-core/src/config/: editor.rs  mod.rs  pending.rs  tests.rs  types.rs  validate.rs
crates/nixman-core/src/flake/: metadata.rs  mod.rs  types.rs
crates/nixman-core/src/generations/: diff.rs  gc.rs  list.rs  mod.rs  rollback.rs  tests.rs  types.rs
crates/nixman-core/src/git/: commit.rs  detect.rs  mod.rs  types.rs
crates/nixman-core/src/intent/: assertions.rs  implications.rs  mod.rs  resolver.rs  trial.rs  types.rs
crates/nixman-core/src/nix_parser/: format.rs  insert.rs  mod.rs  modules.rs  reader.rs  resolver.rs  tests.rs  traversal.rs  types.rs  writer.rs
crates/nixman-core/src/options/: cache.rs  index.rs  mod.rs  search.rs  tests.rs  types.rs
crates/nixman-core/src/privilege/: check.rs  mod.rs  polkit.rs  types.rs
crates/nixman-core/src/services/: actions.rs  config_map.rs  logs.rs  mod.rs  status.rs  types.rs
crates/nixman-core/src/watcher/: conflict.rs  debounce.rs  mod.rs  monitor.rs  types.rs
crates/nixman-core/src/workspace/: detect.rs  hm.rs  mod.rs  tests.rs  types.rs  wizard.rs
crates/nixman-core/tests/: packages_multifile.rs
crates/nixman-core/tests/fixtures/: minimal.nix
crates/nixman-core/tests/test-config/: flake.nix  hardware-configuration.nix
crates/nixman-mcp/: Cargo.toml
crates/nixman-mcp/src/: auth.rs  main.rs  server.rs
(+13 files in other folders)
