[package]
name = "nixman-cli"
version = "0.1.0"
description = "CLI interface for nixman — manage NixOS configuration from the terminal"
authors = ["Emanuel <emanuhells@gmail.com>"]
license = "MIT"
edition = "2021"

[[bin]]
name = "nixman"
path = "src/main.rs"

[dependencies]
nixman-core = { path = "../nixman-core" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4" }
terminal_size = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
