[package]
name = "nixman-core"
version = "0.1.0"
description = "Core library for nixman — NixOS configuration management"
authors = ["Emanuel <emanuhells@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
rnix = "0.11"
rowan = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
notify = "6"
git2 = "0.20"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
tempfile = "3"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
