[package]
name = "nixman-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for nixman — expose nixman-core functions as MCP tools"

[dependencies]
nixman-core = { path = "../nixman-core" }
rmcp = { version = "1", features = [
    "server",
    "macros",
    "transport-io",
    "transport-streamable-http-server", "transport-streamable-http-server-session",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8", optional = true }
tokio-util = { version = "0.7", optional = true }

[features]
default = ["http"]
http = ["dep:axum", "dep:tokio-util"]

[dev-dependencies]
tempfile = "3"
tower = "0.5"
